# ccgram

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  example.jsonl  pyproject.toml
.github/workflows/: ci.yml
docs/: guides.md  providers.md
docs/design/: architecture.md
docs/design/mailbox/: design.md  tests.md
docs/design/message-broker/: design.md  tests.md
docs/design/message-delivery/: design.md  tests.md
docs/design/messaging-cli/: design.md  tests.md
docs/design/messaging-telegram/: design.md  tests.md
docs/design/spawn-request/: design.md  tests.md
docs/design/topic-state-registry/: design.md  tests.md
docs/design/user-preferences/: design.md  tests.md
docs/plans/: 2026-03-29-inter-agent-messaging.md  2026-03-31-modularity-refactoring-2.md
docs/plans/completed/: 20260406-live-view.md
scripts/: restart.sh
src/ccbot/: cc_commands.py  command_catalog.py  markdown_v2.py
src/ccbot/handlers/: cleanup.py  message_sender.py  status_polling.py
src/ccbot/providers/: __init__.py  base.py  claude.py  codex.py
src/ccgram/: bot.py  cc_commands.py  cli.py  config.py  mailbox.py  msg_cmd.py  msg_skill.py  screenshot.py  session.py  transcript_reader.py
src/ccgram/handlers/: callback_data.py  cleanup.py  command_history.py  hook_events.py  interactive_ui.py  live_view.py  message_queue.py  msg_broker.py  msg_spawn.py  periodic_tasks.py  polling_coordinator.py  screenshot_callbacks.py  sync_command.py  text_handler.py  transcript_discovery.py
src/ccgram/providers/: gemini.py
tests/ccbot/: test_cc_commands.py  test_command_catalog.py  test_forward_command.py  test_hook_events.py  test_interactive_ui.py  test_markdown_v2.py  test_provider_autodetect.py  test_provider_selection.py  test_session_monitor_events.py  test_status_polling.py  test_sync_command.py  test_terminal_parser.py  test_text_handler.py  test_vim_mode.py  test_window_callbacks.py
tests/ccgram/: test_cleanup.py  test_config.py  test_hook_events.py  test_mailbox.py  test_msg_cmd.py  test_msg_skill.py  test_screenshot.py  test_status_polling.py  test_tool_batching.py  test_vim_mode.py
tests/ccgram/handlers/: test_live_view.py  test_msg_broker.py  test_msg_spawn.py
